--- a/index.html
+++ b/index.html
@@ -53,23 +53,23 @@
 						<section class="posts">
 							<article>
 								<header>
-									<h2><a href="https://projects.hicounselor.com/code-ide?id=3231">Instagram Users Behaviour Analysis</a></h2>
+									<h2><a href="https://github.com/sunday-amos/Projects/blob/main/Instagram_users_behaviour_Analysis_%20project.ipynb">Datacleaning on Instagram Users Behaviour Analysis</a></h2>
 								</header>
-								<a href="https://projects.hicounselor.com/code-ide?id=3231" class="image fit"><img src="images/instaa.jpg" alt="" /></a>
+								<a href="https://github.com/sunday-amos/Projects/blob/main/Instagram_users_behaviour_Analysis_%20project.ipynb" class="image fit"><img src="images/instaa.jpg" alt="" /></a>
 								<p>Here we completed a project issued by hicounselor to analyze users behaviour on instagram using python for the data cleaning and SQL for the analyses part </p>
 								<ul class="actions special">
-									<li><a href="https://projects.hicounselor.com/code-ide?id=3231" class="button">view project</a></li>
+									<li><a href="https://github.com/sunday-amos/Projects/blob/main/Instagram_users_behaviour_Analysis_%20project.ipynb" class="button">view project</a></li>
 								</ul>
 							</article>
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Food Delivery Company Analysis</a></h2>
+										<h2><a href="https://github.com/sunday-amos/Projects/blob/main/food_app_analysis_project.ipynb">Data Cleaning on Food Delivery Company Analysis</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/online delivery.jpg" alt="" /></a>
+									<a href="https://github.com/sunday-amos/Projects/blob/main/food_app_analysis_project.ipynb" class="image fit"><img src="images/online delivery.jpg" alt="" /></a>
 									<p>here, we try to use R to analyze an online delivery company services to better understand their customers and also improve their services </p>
 									<ul class="actions special">
-										<li><a href="https://sunday-amos.github.io/Rportfolio/" class="button">view project</a></li>
+										<li><a href="https://github.com/sunday-amos/Projects/blob/main/food_app_analysis_project.ipynb" class="button">view project</a></li>
 									</ul>
 								</article>
 								
