--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 							<section class="posts">	
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/shared/SFZYJFXGY?:display_count=n&:origin=viz_share_link">IPL ANALYSIS USING TABLEAU</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/sunny3031">IPL ANALYSIS USING TABLEAU</a></h2>
 									</header>
-									<a href="https://public.tableau.com/shared/SFZYJFXGY?:display_count=n&:origin=viz_share_link" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/sunny3031" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 									<p>This is a tableau project analyzing the indian premere league(IPL) from 2008 to 2022 </p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/shared/SFZYJFXGY?:display_count=n&:origin=viz_share_link" class="button">view project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/sunny3031" class="button">view project</a></li>
 									</ul>
 								</article>
 								
