--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Sunday Amos <br />
 						</h1>
-						<p>Welcome to my portfolio where i take you through some of my completed projects, Please feel free to reach out for any observation or collaboration. Thank you <a href="https://twitter.com/ajlkn">@Sunny</a> 
+						<p>Welcome to my portfolio where i take you through some of my completed projects, When I’m not analyzing data, I’m exploring new ways to learn, grow, and make a positive impact Please feel free to reach out for any observation or collaboration. Enjoy the tour! <a href="https://sunday-amos.github.io/portfolio/"></a> 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
